now remebers which generation you filter by and keep that filter upon reloading, fixedcurrent logged in users name not showing when filtering. Fixed bug where you get an error if you slect submit without selecting a filtering option

--- a/static/favourites.css
+++ b/static/favourites.css
@@ -23,7 +23,7 @@ img {
     height: 200px;
     outline: auto;
 }
-#PokeName {
+#PokeName2 {
     text-transform: capitalize;
     font-family: PokemonHollow;
     font-size: 26px;
